<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/normal_bg"
    android:orientation="vertical" >

    <com.sk.weichat.view.ClearEditText
        android:id="@+id/phone_numer_edit"
        style="@style/IMLineEditText"
        android:layout_marginLeft="9dp"
        android:layout_marginRight="9dp"
        android:layout_marginTop="9dp"
        android:background="@drawable/set_list_up"
        android:hint="@string/please_input_phone_number"
        android:inputType="phone" />

    <com.sk.weichat.view.ClearEditText
        android:id="@+id/password_edit"
        style="@style/IMLineEditPass"
        android:layout_marginLeft="9dp"
        android:layout_marginRight="9dp"
        android:background="@drawable/set_list_down"
        android:hint="@string/please_input_password" />

    <Button
        android:id="@+id/login_btn"
        style="@style/IMButton.Orange"
        android:layout_width="match_parent"
        android:layout_marginLeft="9dp"
        android:layout_marginRight="9dp"
        android:layout_marginTop="9dp"
        android:text="@string/login" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp" >

        <Button
            android:id="@+id/register_account_btn"
            style="@style/IMHyperText"
            android:layout_alignParentLeft="true"
            android:paddingBottom="9dp"
            android:paddingLeft="9dp"
            android:paddingRight="9dp"
            android:text="@string/register_account" />

        <Button
            android:id="@+id/forget_password_btn"
            style="@style/IMHyperText"
            android:layout_alignParentRight="true"
            android:paddingBottom="9dp"
            android:paddingLeft="9dp"
            android:paddingRight="9dp"
            android:text="@string/forget_password" />
    </RelativeLayout>

</LinearLayout>