<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="5dp" >

    <EditText
        android:id="@+id/room_name_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/please_input_room_name"
        android:lines="2"
        android:maxLines="2" />

    <EditText
        android:id="@+id/room_desc_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:hint="@string/please_input_room_desc"
        android:lines="2" />

    <Button
        android:id="@+id/sure_btn"
        style="@style/IMButton.Orange"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="5dp"
        android:hint="@string/sure"
        android:textColor="@color/white" />

</LinearLayout>