<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_below="@+id/top_title_bar"
    android:background="@color/normal_bg" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <RelativeLayout
            android:id="@+id/keyword_rl"
            style="@style/IMTbleLine_UP" >

            <TextView
                android:id="@+id/keyword_text"
                style="@style/IMTbleLine_TextKey"
                android:text="@string/keyword" />

            <com.sk.weichat.view.ClearEditText
                android:id="@+id/keyword_edit"
                style="@style/IMTbleLine_TextValue"
                android:layout_toLeftOf="@+id/keyword_arrow_img"
                android:layout_toRightOf="@+id/keyword_text"
                android:background="@null"
                android:drawablePadding="5dp"
                android:hint="@string/please_input_keyword"
                android:inputType="text" />

            <ImageView
                android:id="@+id/keyword_arrow_img"
                style="@style/IMTbleLine_ArrowImg"
                android:contentDescription="@string/app_name"
                android:visibility="invisible" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/sex_rl"
            style="@style/IMTbleLine_UP" >

            <TextView
                android:id="@+id/sex_text"
                style="@style/IMTbleLine_TextKey"
                android:drawablePadding="5dp"
                android:text="@string/sex" />

            <TextView
                android:id="@+id/sex_tv"
                style="@style/IMTbleLine_TextValue"
                android:layout_toLeftOf="@+id/sex_arrow_img"
                android:layout_toRightOf="@+id/sex_text" />

            <ImageView
                android:id="@+id/sex_arrow_img"
                style="@style/IMTbleLine_ArrowImg"
                android:contentDescription="@string/app_name" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/min_age_rl"
            style="@style/IMTbleLine_UP" >

            <TextView
                android:id="@+id/min_age_text"
                style="@style/IMTbleLine_TextKey"
                android:text="@string/min_age" />

            <com.sk.weichat.view.ClearEditText
                android:id="@+id/min_age_edit"
                style="@style/IMTbleLine_TextValue"
                android:layout_toLeftOf="@+id/min_age_arrow_img"
                android:layout_toRightOf="@+id/min_age_text"
                android:background="@null"
                android:drawablePadding="5dp"
                android:inputType="numberSigned" />

            <ImageView
                android:id="@+id/min_age_arrow_img"
                style="@style/IMTbleLine_ArrowImg"
                android:contentDescription="@string/app_name"
                android:visibility="invisible" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/max_age_rl"
            style="@style/IMTbleLine_UP" >

            <TextView
                android:id="@+id/max_age_text"
                style="@style/IMTbleLine_TextKey"
                android:text="@string/max_age" />

            <com.sk.weichat.view.ClearEditText
                android:id="@+id/max_age_edit"
                style="@style/IMTbleLine_TextValue"
                android:layout_toLeftOf="@+id/max_age_arrow_img"
                android:layout_toRightOf="@+id/max_age_text"
                android:background="@null"
                android:drawablePadding="5dp"
                android:inputType="numberSigned" />

            <ImageView
                android:id="@+id/max_age_arrow_img"
                style="@style/IMTbleLine_ArrowImg"
                android:contentDescription="@string/app_name"
                android:visibility="invisible" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/show_time_rl"
            style="@style/IMTbleLine" >

            <TextView
                android:id="@+id/show_time_text"
                style="@style/IMTbleLine_TextKey"
                android:text="@string/show_time" />

            <TextView
                android:id="@+id/show_time_tv"
                style="@style/IMTbleLine_TextValue"
                android:layout_toLeftOf="@+id/show_time_arrow_img"
                android:layout_toRightOf="@+id/show_time_text" />

            <ImageView
                android:id="@+id/show_time_arrow_img"
                style="@style/IMTbleLine_ArrowImg"
                android:contentDescription="@string/app_name" />
        </RelativeLayout>

        <Button
            android:id="@+id/search_btn"
            style="@style/IMButton.Orange"
            android:layout_width="match_parent"
            android:layout_marginLeft="9dp"
            android:layout_marginRight="9dp"
            android:layout_marginTop="9dp"
            android:text="@string/search" />
    </LinearLayout>

</ScrollView>