<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp" >

            <RelativeLayout
                android:id="@+id/clear_cache_rl"
                style="@style/IMTbleLine_UP"
                android:layout_marginTop="9dp" >

                <TextView
                    android:id="@+id/cache_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:gravity="center"
                    android:text="@string/clear_cache"
                    android:textColor="@color/black"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/cache_tv"
                    style="@style/IMTbleLine_TextValue"
                    android:layout_toLeftOf="@+id/cache_arrow_img"
                    android:layout_toRightOf="@+id/cache_text"
                    android:textColor="@color/dark_dark_grey" />

                <ImageView
                    android:id="@+id/cache_arrow_img"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:background="@drawable/set_list_next"
                    android:contentDescription="@string/app_name" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/use_help_rl"
                style="@style/IMTbleLine_UP" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:gravity="center"
                    android:text="@string/use_help"
                    android:textColor="@color/black"
                    android:textSize="14sp" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:background="@drawable/set_list_next"
                    android:contentDescription="@string/app_name" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/about_us_rl"
                style="@style/IMTbleLine" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:gravity="center"
                    android:text="@string/about_us"
                    android:textColor="@color/black"
                    android:textSize="14sp" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:background="@drawable/set_list_next"
                    android:contentDescription="@string/app_name" />
            </RelativeLayout>

            <Button
                android:id="@+id/exit_btn"
                style="@style/IMButton.Orange"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="9dp"
                android:layout_marginTop="9dp"
                android:text="@string/exit_current_account" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>